# ChangeLog for dev-embedded/openocd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/openocd/ChangeLog,v 1.48 2014/05/03 22:18:55 hwoarang Exp $

  03 May 2014; Markos Chandras <hwoarang@gentoo.org> metadata.xml,
  openocd-0.8.0_rc2.ebuild, openocd-9999.ebuild:
  Massive ebuild improvements and clean up thanks to Paul Fertser
  <fercerpav@gmail.com> on bug #500350. No need for revbump as this will be
  removed soon in favor of final 0.8.0

*openocd-0.8.0_rc2 (26 Apr 2014)

  26 Apr 2014; Markos Chandras <hwoarang@gentoo.org> +openocd-0.8.0_rc2.ebuild,
  -openocd-0.8.0_rc1.ebuild, openocd-9999.ebuild:
  Version bump. Drop versaloon use flag and merge it to the usb one. Update live
  ebuild

*openocd-0.8.0_rc1 (06 Apr 2014)

  06 Apr 2014; Markos Chandras <hwoarang@gentoo.org> +openocd-0.8.0_rc1.ebuild,
  openocd-9999.ebuild:
  Add initial ebuild for openocd-0.8.0-rc1

  21 Dec 2013; Markos Chandras <hwoarang@gentoo.org> -openocd-0.3.1-r1.ebuild,
  -openocd-0.4.0.ebuild:
  Remove old ebuilds

  08 Sep 2013; Markos Chandras <hwoarang@gentoo.org> openocd-0.6.1.ebuild,
  openocd-0.7.0-r1.ebuild, openocd-9999.ebuild:
  Add stlink support to 0.6.1 ebuild per #482162

*openocd-0.7.0-r1 (11 Jun 2013)

  11 Jun 2013; Markos Chandras <hwoarang@gentoo.org> +openocd-0.7.0-r1.ebuild,
  -openocd-0.7.0.ebuild, openocd-0.6.1.ebuild, openocd-9999.ebuild:
  Enable the new ftdi interface when using the ftdi useflag. Bug #472622 thanks
  to Stuart Longland

  27 May 2013; Markos Chandras <hwoarang@gentoo.org> openocd-0.7.0.ebuild:
  Sync ebuild with 9999. Fixes bug 471382

*openocd-0.7.0 (25 May 2013)

  25 May 2013; Markos Chandras <hwoarang@gentoo.org> +openocd-0.7.0.ebuild,
  metadata.xml, openocd-0.6.1.ebuild:
  Version bump. Bug #469592

  24 May 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml,
  openocd-0.6.1.ebuild, openocd-9999.ebuild:
  remove redundant second argument for use_enable
