@@ -8,26 +8,26 @@ DIST openocd-0.8.0-rc2.tar.gz 4821958 SHA256 369121a55d723694d6316798050e5160d95
 EBUILD openocd-0.5.0.ebuild 2261 SHA256 45b0475a335157c0466782d40cbf083db2d5616446c3c8ddc83509a8189e17f3 SHA512 a5203b267e8c9a9003f795509fba97d0840e6f374169f2bfb40c762acfb24e3bd9cbfcff7a06df9936aaf66b58ad1ea98ec07c1879cf356a3173e931e0c0bef9 WHIRLPOOL 0e34d928c2483adbdcf27692029710e36a6001c89952ca70198453fa0c9ebe7d505fd0c93c08148d2b08acc014b87788a4eec85e6bb96772fab7e50795d7e40e
 EBUILD openocd-0.6.1.ebuild 2755 SHA256 3dd0368f4a75c3c6af195e30f8fa081374aaf094ef0385d60d6b8ddac96c1a93 SHA512 a2c662e89aed2d19d9c172caeea64483402bac10c6a25bad85bf4d34d813b957bd0d657983015ccf97212a589275050f48429403092bae63b3cf5983090f02e6 WHIRLPOOL f15578a0ecef847137b06db9c7b570dcd59e73a5cec1dac4667501bce35e9400c64f29826e7eaba7c39912c3aaf232a2d59bca8a6da38b4790c8f9672bb403f7
 EBUILD openocd-0.7.0-r1.ebuild 3131 SHA256 0db9b11554b6004ca4c5dd425015ab769cf46a98b84f1a4a88cebdd7a27175a8 SHA512 ed410e29503fad36e06306ef618a811ca08c6a2c2cc45541f888fc0df7ba44e6014734c88547282082dbd24f171f1f65d1a4c7574bf79926a2ef385800404fd1 WHIRLPOOL d1b22471290a641bef62400e158ba175a6a680e8af43a2276169f2b24c25f833ba07245766e82fbc68bdfe1af12863ae21ce568b16a2ed4fedd0e8b90c591a50
-EBUILD openocd-0.8.0_rc2.ebuild 2786 SHA256 663db81ea7cc3644d9309f54782d7639682b6d9f94dbe7f48253e6deccbe9248 SHA512 658706c167933801a657e96a16556317c305f79dbcf7c8b466115be70bdf2fbad0cad5e473665f4888af8591bd9824ac390edb9455a64108b769b2d13d298b6c WHIRLPOOL bc449065afaa171174ee7e81f7e664f50dbc49b81aa1f68f4c567b51fd258977a7fc42b869b5d1ecf79af66e7ca857406cb014e04f1c7fee8afb4950d027e2c3
-EBUILD openocd-9999.ebuild 2782 SHA256 803a67722794b391d0985e9c2f9da92ab8f2c34ad7b32da97b8a812ffa99e567 SHA512 7c1e37f1fb806ce5ccd7349e80add8e851d59fc62380434ae86600445961fa125b04aafa408096e945dc9f8f64c4aca039963c78fdb89d391e162c6b225d9216 WHIRLPOOL 8536306a13a9a9dde75ff4ede47fef5c5bb4a6f8cf6f6404d40f854d8d28b1cc723b72b26b7f8fc7686fe930905c5bb31e20f031bf6ede04aada1100f6aa07cd
-MISC ChangeLog 8214 SHA256 fd7ad3c142e25face5c6cd9d9b720abdc2fa7ade0c425c507c7940cae8831705 SHA512 00ed07eb59d59c784b3c2cc201f6e75ac06911f94462c94259d1aac9e56dd2768bbd7e2bb31d9d8d484169c54fe51c60c092af99cc8fe3d0d2b62935b5312f29 WHIRLPOOL 8a501dea8b8ffa9aacbe29cbd8f3912e9bdb117a6656c0974c7a431dab104e313d5b1c2babe7139d1ea3cb63b09437c466976f2d7e089479a7a7c94dd8a61a8f
-MISC metadata.xml 1086 SHA256 4f018b4a2cf1297ce5f4f7d3d45e621d7b00c08d115f8ac1675abe2aca0e98d7 SHA512 0b543dc4eddb404e2fd99e31b753ab7c36dccb1953da6c5fcc0e5d9d71f8e3048e4a8d4d3e6101cca4b3618dbff3d8dbeffc3696a083927bb33f3b10a9abec6e WHIRLPOOL 9874834bb84f58125488f67d1a9f2524d4ede32d35ce681a1dc406252a2c6ac5d5ffd65943ad4613c4bc81df72f817ae10b8d2e2771b0cab6699e3367d4ddad7
+EBUILD openocd-0.8.0_rc2.ebuild 2726 SHA256 8914c637704e694a47edb872d8fbe11b696bafb4d40c721793f2818e53fd3b42 SHA512 c96ddbc5489d012950b76f1da6967f0f17687ee86772c9dbde36195a87d67dbe82dcb46e9e9c5516d985f572f6b37bc0d9ed1c182a1a9e9327198fa4a060bdb7 WHIRLPOOL 85bcd3b975a3b727944f8258334e336f6c382b52731e67fa6fab48cca62147259b00c8ff7b87c56a8b346ba5581e8e7ec4e1adf9e4f0b9fb49973c6f7d38bdee
+EBUILD openocd-9999.ebuild 2722 SHA256 772b7263269abee252a8ac6c7d4c2e2c74f12c4a116311d8afa3929b10fd87d6 SHA512 c6efb8352e32f5df538f5f9fc024e903f83b097df05abc1d82dd62c02c65ca2ea5bb96a96423b348fa2ee6e181b88aa35021c74ebb6d394b0d97474605c03819 WHIRLPOOL b66b94e1a99d99d858c4cf5e8dbe7ab8db4bb4e30dd5c98cfa13084ed265ba731e41b7dd5baa0183b6237bff7e0da12b94aae36e069309d92009fd242309db0e
+MISC ChangeLog 8451 SHA256 864fa88293b418ba24bc5730420b8ec4013383c2a1fe045ee93cc729f2d32e76 SHA512 027e19b618979bf6603bdb4bc7d5bd5c695bdf584cff2442c94e23ebbbec3707fd15a9d5d8ca587ba034fe7062e0ddd17ce59f4fe5f39eb565c838624f436c23 WHIRLPOOL 9f8a8b1a34a130e5b7bdee638e31c2bc99f5e62fb1e57eae6fad62aff1ddcdb517c646c95cd64878c5109da49bf68dce9bbf4b7faa2d1c97859b59ae08d06a82
+MISC metadata.xml 1237 SHA256 4613a2c1466516eceee1e2e196e3c0f725d83e6e711754e1560d9e219ab54fe6 SHA512 b62f0abb0156a23a0d7a1f9de4ced8c795ab7a9e50c73094a9ffae36666606fee46ffa22916afdc7dcc5aa320069fcab4d0413827df640d5b4319fec38bad607 WHIRLPOOL 6b5eda5dc4d58166768ebbf8a055058ef5262c46d783f4fa0a6d0d29a961b5975363a3ff56bcc624b769c4057d6e4768f89928006d2ba8709ff4dfc55cc8bb32
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTZWr0XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTZhlQXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88n24QAIwkRYPT7aJZ4DHonIHLROSw
-9EM3uFDSQbZxPk7Fp32wMHs4WOWov98WZuVrdLs7cBw68/cDevxbEw8RPmlp4QW6
-xrXa7VR/ZbblkzZ6CnCkGialv2F5ABGTRt4JbOBpfCRVaQBXzsExvSRCdewmwPl/
-RnWMfqtrgnSSgCSN0aw7FhvUEK/cW9stYUVb55Baasx1gDPlr+bL+OYHDvWGDcHd
-MisptEzcddgN30FdS+KOElVEMAh8o/r124rsU1Ikx/EzXzrSSvSf+D4Nlzuhl/3p
-R01dfyxlkFcM09s4Bde/vpBaIIU4d15JfHKZe5ZL0njlwGAXIjMOkM/M85qt4yaY
-BvTn/Zfgbm9uuuwaJ258y6rKobp/XbHY9NtwrLAEwX4gjpgZ92QO80capLlMiSKd
-gVBfB6MefyhJiPto3JebkxALwFGueBFfsQc3jUwY4kHbhQle+OOEw1agC56xv6GF
-b5NfmGmiRUgSygBTNNisaUbHJlTFYO3XEOoBPw3qvzcFie4VbVBetA4Lky+5QLv0
-jA5kgHbwPX9NyIWGxPcOLL5iSzPVYPzgMFYVlqm8WtN6DkmVeoHOASrdD/Z/4+p4
-aqA/emiXnE/Q9itKgXYR5kfpr2Q8fL2p4HcVXHvw/9raxmmSjFrFwHV1I/iGpjv/
-C1lg4ZOVhYsx+H6trvN0
-=xsK0
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun881TsP/R6ZGZm1+IJqULZ/fUukvQci
+xmhzSOntZw/LcTeinHweqYx/JVbfbC57wnUQnEMGERBBDpERpKZNho6gy4BFVz/X
+nWMEFLg1e2DWijHKyqdgagUs4x9vFVmQYv6hHocbIuxFmPzgi0YMe147Q3ub85B9
+ZW7FtjApv+Hr6fhBagV9vNvcuWogSweX/XxAAERJc2SRHHQydfnMypXIBuS2oT8U
+zHSDceFgOHCwdNcSX8a+s00MKO5qWz1S7Bj89nJlU7WN6FDBXYPsJmqtbC/toEuC
+uRg5lEdITodxaDiQ6iPTi/zIN5D4TpduOfFIj9FI/evqQCD0A5Y43zOHdUeET/Ca
+Mj8lok6yUAkHih0QS9/D8BzPLwW7A5ZVhyQjFveX+IC9/QDKU9/qM5y9kws3gPyh
+JOXIJk068fw/bneoLZ6eiBVARwNQLikTgRcHJSxyoFNE3es+uMrCiMUNdAhyE2ZQ
+FKjGvq1XQkjlx0SnF1wKQkDlTDu2NIjcmL9XjB3kJRKrzKU0H5LykgCbQx5xL0Po
+z5vEWmOFwT6SxZCPprPRegXlkqY/xqEdxPTjBrNth4p4my5F8iRfrPc2h+GAe88z
+K5+SeJ2KcQGXUhNhzLGmiClUerGBX0MO5ZyISqk4HvyQMvRtF5o2xAGDCD4rEhh7
+1i9mQ2EP0OmoZAe/HKy7
+=mkFi
 -----END PGP SIGNATURE-----
