@@ -2,6 +2,11 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>dev-embedded</herd>
+<maintainer>
+	<email>fercerpav@gmail.com</email>
+	<name>Paul Fertser</name>
+	<description>Upstream contact. CC him on bugs</description>
+</maintainer>
 <use>
   <flag name='blaster'>Enable support for Altera USE-Blaster</flag>
   <flag name='cmsis-dap'>Support for CMSIS-DAP compliant adapters</flag>
