@@ -1,5 +1,5 @@
 DEFINED_PHASES=configure install prepare
-DEPEND=virtual/pkgconfig virtual/pkgconfig
+DEPEND=>=dev-lang/jimtcl-0.73 cmsis-dap? ( dev-libs/hidapi ) usb? ( virtual/libusb:0 virtual/libusb:1 ) ftdi? ( dev-embedded/libftdi ) virtual/pkgconfig virtual/pkgconfig
 DESCRIPTION=OpenOCD - Open On-Chip Debugger
 EAPI=5
 HOMEPAGE=http://openocd.sourceforge.net
@@ -11,4 +11,4 @@ RESTRICT=strip
 SLOT=0
 SRC_URI=mirror://sourceforge/project/openocd/openocd/0.8.0-rc2/openocd-0.8.0-rc2.tar.gz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	udev	a9a8d051efb42bfe884c1db82ce161de
-_md5_=d0fd5dfaf7756b9839ddff7601722324
+_md5_=a8046f9560e203bde6badbe7f11a5f28
