@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-python/pycrypto >=dev-python/requests-1.0 >media-video/rtmpdump-2.4 dev-python/setuptools userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_2(-)?,-python_single_target_python2_7(-),-python_single_target_python3_2(-)]
+DESCRIPTION=CLI tool that pipes video streams from services like twitch.tv into a video player
+EAPI=5
+HOMEPAGE=https://github.com/chrippa/livestreamer
+IUSE=python_targets_python2_7 python_targets_python3_2
+KEYWORDS=~amd64 ~mips ~x86
+LICENSE=Apache-2.0 BSD-2 MIT-with-advertising
+RDEPEND=dev-python/pycrypto >=dev-python/requests-1.0 >media-video/rtmpdump-2.4 python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_2(-)?,-python_single_target_python2_7(-),-python_single_target_python3_2(-)]
+REQUIRED_USE=|| ( python_targets_python2_7 python_targets_python3_2 )
+SLOT=0
+SRC_URI=https://github.com/chrippa/livestreamer/archive/v1.8.0.tar.gz -> livestreamer-1.8.0.tar.gz
+_eclasses_=distutils-r1	364122897f9dc771167ee5ff362e54e1	eutils	025442f2eecab39ad0b4e541b6e142af	multibuild	576bde67ccb00fe7175a23755deb2e66	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	1356c4bb8f56765cff4b74c0128d2a4f	python-utils-r1	52284f64cfc64a6d70bc00a9f5a01c6f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=74635589632f7ee54c92ac7a1cccf76b
