@@ -3,26 +3,28 @@ Hash: SHA256
 
 DIST livestreamer-1.7.2.tar.gz 557683 SHA256 0fba4fe00736992ac31dc3a7edc3850b6d2ff8c4d67ca518db699010f1f12ece SHA512 79db7a020828790372206bf2e145b2fe99e5b94965206f44dbcf553653f88aa4163cc866631202371290eec67bf915de05a5ab348fcb6752c2362f46fc1af15e WHIRLPOOL 782abfe62062ff33a785585364b6506a9c76246d0a7551509a91f90e5bf69052b329aad7bacd4676c2adae4782b966db0481565f20668dd3c75251682621b172
 DIST livestreamer-1.7.5.tar.gz 561992 SHA256 1e7db873f6c2b21a7cba2cdb0143e5da0de1b38fde598cacd4cc66d3bbc25e5d SHA512 e1a618a49e64bcf89d8029d49601812229670ed0f7955ce5b61cc1f79b15652f4a6b97ed253b0e149c228d9552e0c314009c73011253741e06f3b45152fc980a WHIRLPOOL 713b301c0307462d38c1ae452e1723b1eaedf14ed75f8433a324bd433f2604cf8513f73f43bfe4a1802bdf647725873961955ebb87882197d4b3e8b299436f25
+DIST livestreamer-1.8.0.tar.gz 571424 SHA256 88122d4d197fa32560b53b3717edc88b87220aad7e4bda3a57387f6897fdf73b SHA512 282a0168bc71840a11104b9a77918c09697a92b9e0ab4a410493492e6a0f7a842df58d4256faa107bab83857e1a70392aef7c8cdc8161b9af61d1baa7640b2e6 WHIRLPOOL 7b4ad9f7c5354598d117f1fa8fb88ff6b22af630f4d8991d4ae15c6b7f886c4b7e9f0a2e9b9b66aefae2354aebc805240f1c175c41b06d1dbd6615fb94d511a8
 EBUILD livestreamer-1.7.2.ebuild 741 SHA256 cce9ffd3f220ac79c72b17ec465542d74e96b6dc5e49c4f233f134a48f4434e4 SHA512 0fa8447d580aed9b637d1c2aead81e7b01a6ac00930f2ce20bc1390dbda467e82464197db4a6607e00eec035ae9603416089d8d272b6dab886d7692f1236d272 WHIRLPOOL 44d442868dc7b57c07739c85e999fd9ea98626b59ba256bb7b0deba20ba361add467f69ed9bf37ddb8b579194f6893d9b100a232a94e34d10be6b9d086224584
 EBUILD livestreamer-1.7.5.ebuild 748 SHA256 418040e357a9ea39fce5cdd194be7eaf27d71d90cdc7811f7b117988d1873779 SHA512 42835e4b3487a1b0791aa2dec6da591f1b198309af8eec013a2f46ad5b904618aa670e609bd56068f4c88e503d4bfdac40395bb1f64bffd473df40f17ec2f9f6 WHIRLPOOL 6e5d48aac65664f70d2d7ed652fbc85a5bf0b04ec6d0cbfb5ef0d906dd36abf50c84ade425e295817fb2822cfbec4b6318e260475dc7a5bf348b095d752c8af9
-MISC ChangeLog 1786 SHA256 45c3159227e9d66f6358070973288d1777525ee580a3fc56fefc7a60e5c3773e SHA512 74f643f15fc200bb047c1cbf4c1f0334cd62fc28d1980f53000a561ae2a72dc98b6ea0c1a682e15ed6a4942a5e039ee74156fd7ae07d6c4e63258a9ade43268e WHIRLPOOL 4a2d84a9b6814ca7f22a1fc1c303e9b07599855866ce10db3742ef408c02e8a5df9555011518e247a9831274c4b3fa09703e92441f63fe5b27e860571c0d16c7
+EBUILD livestreamer-1.8.0.ebuild 748 SHA256 f2e77c98a4acbdc32df3b83b5dc67c9c08fd1a2be3aa265c753b6161e02c65e0 SHA512 725876724f58e42d86fce7c28c1f3cf45d0b2206ed11b949e2e739d66a989fcd412ff583ce1e28c0866886226b32c438b012ec6d2f1660335011503e42acd1c7 WHIRLPOOL e21be8efa87f5e1a5eb75222f0c4c95b597fca81dc7443ce1ea6689ec958c69b87e0f66e9e435017ab6411ad6fbe6e4443e11211bd9eac0b01b974edec3a4059
+MISC ChangeLog 1932 SHA256 8a5d8d637f2a538b33ba8315b40217c3943eff7aeaa91d5ab9cc6e87c0d3f560 SHA512 20b8315d26f87b27beda07d38a81d08a12226803a875f1dd380a74d1ebc773b68d1b66431cf5745cde8139eca21dba6106deae309ccdf83d49f7a2c0ad67e058 WHIRLPOOL a12f2d09ecc49129f98e3f0d01385b5e27070d0e267890c6c2f661a5b50c107ca4153b269ca6c368254ec8dec36d1123a51b06929e6a36a265622aaf23ba1728
 MISC metadata.xml 365 SHA256 07efa5dd9ffeb89ab05a5f671da6c0f649033ce5aa2b4bc49a79bf18602e1832 SHA512 2e832be243213909933e0a036b53bef89b21f1927ace43a52c1bff010bfa4dec3977ea94fba7391f043a6ff0437f19a8d7ffb93846a8e1fefb9f8542ae8f830f WHIRLPOOL 22c977c2e1a63b529c3096fd5ee3f7471a970da4656bb07272ea3cc9eb1fda117aeb0e583ac99468a66ce91ae56a2a2d2f7de110c05d918d851badf8aca89299
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTJXseXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTZhyaXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88YAYQAKEbsLwlHKEA5O4ATtLpEUBA
-mzNm6cTUCPHONcZ1vV5CHbcOVmPemM92Tfph6Da5M87s9Ab5otX3CaH1f5Dpzsto
-aGH5cJWuBOO3mOUrFphUruJiJMI0IpG63pzsmN+L3UJdZQj1t2Gf2H0vJuxdgOXz
-6veq9O5Oqq7IRX4VWeXkErlUCD+kA7Bwf3n22YrvOVr5IDhoWUPPa0gbIC3/stoh
-EEXxz9aDBjyLOpur6JqmHNxw4m05pHU3HZ+W6LeeK6ksNu140iznmVeiimPvxp3F
-8x+Qx9TOTmlCiqFWFKQeSmaHn58PvCcvywPVgeJoewhX0woW+XwHsRSpNGX14D4q
-00OSWMg1o1ShEjs44uxKAxsCBBv10+xnjf3+WzHaSz3BE/0VaOiaVOMyyNg6+pg6
-xRyPXgVVBHHnAuUsoI/WwGHBJnsglYYV0f/FqO4H5WE6Og3oXx6x1AmAQXHIAac6
-iZf39a0p3JjtKdc8NY/ODzufXVTsmzzIf+jvWDWSoE58YPfwoUop6yQQ2PfwrVid
-Rk+3KZZyUtyvmZyMG+s2SH8dv6YU/E88XrUIlCt356NYm82xlLuoxrp/iaAKdXan
-kOOcvJhL6tXYi/I6OZox+4SXJXv33SvgKHzIXpwcJI0sHEBS4FuNWMRQKEYsXqiR
-ExzwltVEzriITX6Gd/nB
-=FQsU
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88tjAP/RIoNzirdUFF5MefBIgjACch
+wZ+DNrxOzZJLzP08btUjg88nndVk5IY5qj5ok3g2I5dGBVIT0olqZAlnXvEeVffj
+QGZ+J/Z15H1LmykQ2UqCIu2YwH4hpmM6y86Ssinl3X6MlPDmW5Ocx0RXxD1mRRE9
+Hs27tBBpfaxgZbN1R8mbL61iIR+mdhbIYSbn+FVQK7BRUQ2jAQCjccbiQy9BIBel
+FBDbJqJXAW1FuONJN4UVWIghkAshDo9x4ToQThzD61r3FWU92guTtOmFU/BWhjcl
+mcrriijVcrOJ1nlJpu7HuZnSXND9xWYXSrB4FUiIj8ecF1LKpv2KwoDP68fpmPxu
+b6fEzW/jbsGXJoiBgzR0ly9bEYGDkk+05C4qnxF6O+OPxD1V1ew8RS16MtECNsKK
+lUOvlks5YeZtd5wq8oW/Bnx7jI9cUXzhDEvhF08Ecdef52NIftryFv62+s24Cbbs
+iuLDJyVDzQcJnkpS0K6ToI3SVys3vKGYzKNeSeh4q3LvqvjN/cNjyfm2ZKcLaSPf
+5vFaviNkxNx/jY3OaZ/0J1tq7cZtcfbWvVIKSCgJ0vQiyyl8eODUQppL5MSmShQo
+fXATDvgznczlIwgCj+c9x3rZZaeLpexop40Cl7qTRdkfX1GbSQOLwvmEjzcP7jHw
+i+oykZZtoOIgogfbkmeg
+=tbKt
 -----END PGP SIGNATURE-----
