@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/livestreamer
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/livestreamer/ChangeLog,v 1.9 2014/03/16 10:22:25 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/livestreamer/ChangeLog,v 1.10 2014/05/04 10:56:53 hwoarang Exp $
+
+*livestreamer-1.8.0 (04 May 2014)
+
+  04 May 2014; Markos Chandras <hwoarang@gentoo.org> +livestreamer-1.8.0.ebuild:
+  Version bump. Bug #508822
 
   16 Mar 2014; Markos Chandras <hwoarang@gentoo.org> -livestreamer-1.6.1.ebuild:
   Also remove livestreamer-1.6.1.ebuild as requested
